--- a/index.html
+++ b/index.html
@@ -113,24 +113,24 @@
 			<div class="row image-gallery">
 
 
-				<div class=" hide-on-mobile col-lg-6 col-md-6 col-xs-6 thumb">
-					<img class="thumbnail img-responsive" src="hero-carousel-1.png" alt="">
+				<div class=" hide-on-mobile col-lg-12 col-md-12 col-xs-12 thumb">
+					<img class="thumbnail img-responsive" src="hero-side-crop.png" alt="">
 				</div>
 
 				<div class="show-on-mobile col-md-12 col-xs-12 thumb">
-					<img class="thumbnail img-responsive" src="hero-carousel-1-2.png" alt="">
+					<img class="thumbnail img-responsive" src="hero-cropped.png" alt="">
 				</div>
 
-				<div class=" hide-on-mobile col-lg-6 col-md-6 col-xs-6 thumb">
-					<img class="thumbnail img-responsive" src="mid-carousel-1.png" alt="">
+				<div class=" hide-on-mobile col-lg-4 col-md-4 col-xs-4 thumb">
+					<img class="thumbnail img-responsive" src="tri-mod-1.png" alt="">
 				</div>
 
-				<div class=" hide-on-mobile col-lg-6 col-md-6 col-xs-6 thumb">
-					<img class="thumbnail img-responsive" src="mid-carousel-2.png" alt="">
+				<div class=" hide-on-mobile col-lg-4 col-md-4 col-xs-4 thumb">
+					<img class="thumbnail img-responsive" src="tri-mod-2.png" alt="">
 				</div>
 
-				<div class="hide-on-mobile col-lg-6 col-md-6 col-xs-6 thumb">
-					<img class="thumbnail img-responsive" src="mid-carousel-3.png" alt="">
+				<div class="hide-on-mobile col-lg-4 col-md-4 col-xs-4 thumb">
+					<img class="thumbnail img-responsive" src="tri-mod-3.png" alt="">
 				</div>
 
 				</div>
@@ -140,9 +140,9 @@
 				<div class= "show-on-mobile ">
 
 					<div class="owl-carousel owl-theme ">
-  <div> <img class="carousel-margin thumbnail img-responsive" src="mid-carousel-1.png" alt=""></div>
-  <div> <img class="carousel-margin thumbnail img-responsive" src="mid-carousel-2.png" alt=""> </div>
-  <div><img class="carousel-margin thumbnail img-responsive" src="mid-carousel-3.png" alt=""> </div>
+  <div> <img class="carousel-margin thumbnail img-responsive" src="tri-mod-1.png" alt=""></div>
+  <div> <img class="carousel-margin thumbnail img-responsive" src="tri-mod-2.png" alt=""> </div>
+  <div><img class="carousel-margin thumbnail img-responsive" src="tri-mod-3.png" alt=""> </div>
   </div>
 
 				</div>
