--- a/index.html
+++ b/index.html
@@ -112,13 +112,12 @@
 		<section>
 			<div class="row image-gallery">
 
-
 				<div class=" hide-on-mobile col-lg-12 col-md-12 col-xs-12 thumb">
-					<img class="thumbnail img-responsive" src="hero-side-crop.png" alt="">
+					<img class="thumbnail img-responsive" src="hero-side-crop.jpg" alt="">
 				</div>
 
 				<div class="show-on-mobile col-md-12 col-xs-12 thumb">
-					<img class="thumbnail img-responsive" src="hero-cropped.png" alt="">
+					<img class="thumbnail img-responsive" src="hero-cropped.jpg" alt="">
 				</div>
 
 				<div class=" hide-on-mobile col-lg-4 col-md-4 col-xs-4 thumb">
@@ -135,13 +134,12 @@
 
 				</div>
 
-
 				<!-- 		carousel -->
 				<div class= "show-on-mobile ">
 
 					<div class="owl-carousel owl-theme ">
-  <div> <img class="carousel-margin thumbnail img-responsive" src="tri-mod-1.png" alt=""></div>
-  <div> <img class="carousel-margin thumbnail img-responsive" src="tri-mod-2.png" alt=""> </div>
+  <div><img class="carousel-margin thumbnail img-responsive" src="tri-mod-1.png" alt=""></div>
+  <div><img class="carousel-margin thumbnail img-responsive" src="tri-mod-2.png" alt=""> </div>
   <div><img class="carousel-margin thumbnail img-responsive" src="tri-mod-3.png" alt=""> </div>
   </div>
 
